# CS350_2

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  demo_renderer.cpp
src/: CMakeLists.txt  camera.hpp  debug_system.cpp  debug_system.hpp  geometry.cpp  geometry.hpp  math.hpp  opengl.cpp  opengl.hpp  window.hpp
test/: CMakeLists.txt  common.hpp  geometry.cpp
test/in_geometry/: closest_point_plane.txt  closest_segment_segment.txt  in_aabb_aabb.txt  in_frustum_aabb.txt  in_frustum_sphere.txt  in_plane_aabb.txt  in_plane_point.txt  in_plane_sphere.txt  in_plane_triangle.txt  in_point_aabb.txt  in_point_sphere.txt  in_ray_aabb.txt  in_ray_plane.txt  in_ray_sphere.txt  in_ray_triangle.txt  in_sphere_sphere.txt
